src/test/ui/borrowck/borrowck-move-mut-base-ptr.stderr
error[E0502]: cannot borrow `*t0` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-move-mut-base-ptr.rs:10:14
   |
LL |     let p: &isize = &*t0; // Freezes `*t0`
   |                     ---- immutable borrow occurs here
LL |     let t1 = t0;
   |              ^^ mutable borrow occurs here
LL |     *t1 = 22;
LL |     p.use_ref();
   |     - immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
